--- a/app/src/main/res/layout/dialog_agent_customer_deposit.xml
+++ b/app/src/main/res/layout/dialog_agent_customer_deposit.xml
@@ -28,9 +28,9 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight=".9"
-            android:layout_gravity="end"
+            android:layout_gravity="end|center"
             android:layout_margin="5dp"
-            android:src="@drawable/close" />
+            android:src="@drawable/ic_close_white" />
 
     </LinearLayout>
 
@@ -52,7 +52,6 @@
                 android:id="@+id/text_view_error_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:fontFamily="@font/josefin_sans"
                 android:gravity="center"
                 android:text="Insufficient Funds!"
                 android:textColor="@color/device_problem"
@@ -77,7 +76,7 @@
                     android:layout_height="45dp"
                     android:layout_weight="1"
                     android:layout_alignParentTop="true"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/rectangular_blue_solid"
                     android:orientation="horizontal">
 
                     <Spinner
@@ -100,7 +99,7 @@
                         android:layout_marginRight="10dp"
                         android:layout_centerVertical="true"
                         android:layout_gravity="center"
-                        android:src="@drawable/ic_chevron_down" />
+                        android:src="@drawable/ic_down_chevron" />
 
                 </RelativeLayout>
 
@@ -117,7 +116,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/josefin_sans"
                     android:text="Wallet Number"
                     android:textSize="@dimen/margin_16" />
 
@@ -131,7 +129,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_alignParentTop="true"
-                        android:background="@drawable/edittext_corner"
+                        android:background="@drawable/outline_primary"
                         android:orientation="horizontal">
                         <TextView
                             android:layout_width="0dp"
@@ -150,7 +148,6 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.5"
                             android:background="@android:color/transparent"
-                            android:fontFamily="@font/josefin_sans"
                             android:gravity="center_vertical"
                             android:inputType="phone"
                             android:maxLength="9"
@@ -176,15 +173,14 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Account Number"
-                    android:textSize="16sp"
-                    android:fontFamily="@font/josefin_sans" />
+                    android:textSize="16sp"/>
 
                 <EditText
                     android:id="@+id/add_money_creditCardNumber"
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:paddingStart="@dimen/dimen_10dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:inputType="number"
                     android:textColor="@android:color/black"
                     android:layout_marginTop="8dp" />
@@ -201,7 +197,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/josefin_sans"
                     android:text="Mobile Number"
                     android:textSize="@dimen/margin_16" />
 
@@ -215,7 +210,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_alignParentTop="true"
-                        android:background="@drawable/edittext_corner"
+                        android:background="@drawable/outline_primary"
                         android:orientation="horizontal">
                         <TextView
                             android:id="@+id/txt_crops_estimated_revenue_units"
@@ -235,7 +230,6 @@
                             android:layout_height="match_parent"
                             android:layout_weight="0.5"
                             android:background="@android:color/transparent"
-                            android:fontFamily="@font/josefin_sans"
                             android:gravity="center_vertical"
                             android:inputType="phone"
                             android:maxLength="9"
@@ -263,7 +257,6 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefin_sans"
                     android:text="Amount"
                     android:textSize="@dimen/margin_16" />
 
@@ -271,7 +264,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:orientation="horizontal">
                     <TextView
 
@@ -304,78 +297,58 @@
             </LinearLayout>
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
                 android:layout_marginTop="@dimen/margin_10"
-                android:layout_marginRight="@dimen/margin_10"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/rounded_corners_button"
-                android:gravity="right"
-                android:paddingRight="@dimen/dimen_10dp"
+                android:background="@drawable/rectangular_blue_solid"
+                android:layout_gravity="center"
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
                 android:visibility="gone">
 
                 <Button
                     style="@style/Button_DW"
-                    android:layout_width="match_parent"
-                    android:layout_height="40dip"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:background="@color/transparent"
                     android:backgroundTint="@color/textColor"
                     android:text="@string/withdraw"
-                    android:textAllCaps="false"
+                    android:textStyle="bold"
+                    android:textAllCaps="true"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/button_text_size" />
+                    android:textSize="16sp" />
 
-                <ImageView
-                    android:layout_width="30dip"
-                    android:layout_height="30dip"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_margin="10dip"
-                    android:src="@drawable/ic_right_arrow">
 
-                </ImageView>
 
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/margin_10"
                 android:layout_marginTop="@dimen/margin_10"
-                android:layout_marginRight="@dimen/margin_10"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/rounded_corners_button"
-                android:gravity="right">
+                android:paddingStart="20dp"
+                android:paddingEnd="20dp"
+                android:background="@drawable/rectangular_blue_solid"
+                android:layout_gravity="center">
 
                 <Button
                     android:id="@+id/button_add_money"
-                    style="@style/Button_DW"
                     android:layout_width="match_parent"
-                    android:layout_height="32dp"
-                    android:layout_gravity="center_vertical"
-                    android:layout_weight="1"
+                    android:layout_height="match_parent"
+                    android:gravity="center"
                     android:background="@color/transparent"
-                    android:backgroundTint="@color/textColor"
                     android:text="@string/submit"
+                    android:textAlignment="center"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/button_text_size"
+                    android:textSize="16sp"
                     android:textStyle="bold" />
 
-                <ImageView
-                    android:layout_width="30dip"
-                    android:layout_height="30dip"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_margin="10dip"
-                    android:src="@drawable/ic_right_chevron">
 
-                </ImageView>
 
             </FrameLayout>
 
