--- a/app/src/main/res/layout/wallet_payment_methods.xml
+++ b/app/src/main/res/layout/wallet_payment_methods.xml
@@ -35,9 +35,9 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight=".9"
-            android:layout_gravity="end"
+            android:layout_gravity="end|center"
             android:layout_margin="5dp"
-            android:src="@drawable/close" />
+            android:src="@drawable/ic_close_white" />
     </LinearLayout>
 
     <LinearLayout
