--- a/app/src/main/res/drawable/ic_down_chevron.xml
+++ b/app/src/main/res/drawable/ic_down_chevron.xml
@@ -1,4 +1,9 @@
-<vector android:height="24dp" android:viewportHeight="256"
-    android:viewportWidth="256" android:width="24dp" xmlns:android="http://schemas.android.com/apk/res/android">
-    <path android:fillColor="#ffffff" android:pathData="M225.813,48.907l-97.813,97.813l-97.813,-97.813l-30.187,30.186l128,128l128,-128z"/>
+<vector xmlns:android="http://schemas.android.com/apk/res/android"
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="24"
+    android:viewportHeight="24">
+    <path
+        android:fillColor="#fff"
+        android:pathData="M7.41,8.59L12,13.17l4.59,-4.58L18,10l-6,6 -6,-6 1.41,-1.41z" />
 </vector>
