--- a/app/src/main/res/layout/wallet_add_money.xml
+++ b/app/src/main/res/layout/wallet_add_money.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_gravity="center"
     android:background="@drawable/dialog_background"
     android:orientation="vertical"
@@ -33,9 +34,9 @@
             android:layout_width="match_parent"
             android:layout_height="40dp"
             android:layout_weight=".9"
-            android:layout_gravity="end"
+            android:layout_gravity="end|center"
             android:layout_margin="5dp"
-            android:src="@drawable/close" />
+            android:src="@drawable/ic_close_white" />
 
     </LinearLayout>
 
@@ -75,9 +76,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
-                    android:fontFamily="@font/josefin_sans"
                     android:text="Receiver Number"
-                    android:textSize="@dimen/margin_16" />
+                    android:textSize="16sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -89,7 +89,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:layout_alignParentTop="true"
-                        android:background="@drawable/edittext_corner"
+                        android:background="@drawable/outline_primary"
                         android:orientation="horizontal">
                         <TextView
                             android:id="@+id/txt_crops_estimated_revenue_units"
@@ -136,29 +136,30 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight=".2"
-                    android:fontFamily="@font/josefin_sans"
                     android:text="Purpose"
-                    android:textSize="@dimen/margin_16" />
+                    android:textSize="16sp" />
                  <LinearLayout
                      android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:layout_marginTop="8dp"
                      android:padding="8dp"
-                     android:background="@drawable/edittext_corner">
+                     android:background="@drawable/outline_primary">
                      <CheckBox
                          android:id="@+id/checkbox_savings"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:text="Savings"
-                         android:textSize="16sp"/>
+                         android:textSize="16sp"
+                         app:buttonTint="@color/colorPrimary"/>
                      <CheckBox
                          android:id="@+id/checkbox_agric_inputs"
                          android:layout_width="wrap_content"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:text="Agriculture Inputs"
-                         android:textSize="16sp"/>
+                         android:textSize="16sp"
+                         app:buttonTint="@color/colorPrimary"/>
                  </LinearLayout>
              </LinearLayout>
 
@@ -172,15 +173,14 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:fontFamily="@font/josefin_sans"
                     android:text="Amount"
-                    android:textSize="@dimen/margin_16" />
+                    android:textSize="16sp" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="45dp"
                     android:layout_marginTop="8dp"
-                    android:background="@drawable/edittext_corner"
+                    android:background="@drawable/outline_primary"
                     android:orientation="horizontal">
                     <TextView
 
@@ -251,40 +251,34 @@
             </FrameLayout>
 
             <FrameLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/margin_10"
                 android:layout_marginTop="@dimen/margin_10"
                 android:layout_marginRight="@dimen/margin_10"
                 android:layout_marginBottom="5dp"
-                android:background="@drawable/rounded_corners_button"
-                android:gravity="right">
+                android:paddingStart="15dp"
+                android:paddingEnd="15dp"
+                android:background="@drawable/rectangular_blue_solid"
+                android:gravity="center_horizontal"
+                android:layout_gravity="center_horizontal">
 
                 <Button
                     android:id="@+id/button_add_money"
                     style="@style/Button_DW"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="40dip"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
                     android:background="@color/transparent"
                     android:backgroundTint="@color/textColor"
                     android:text="@string/deposit"
-                    android:textStyle="bold"
                     android:textAllCaps="true"
                     android:textColor="@color/white"
-                    android:textSize="@dimen/button_text_size" />
+                    android:textSize="@dimen/button_text_size"
+                    android:textStyle="bold" />
 
-                <ImageView
-                    android:layout_width="30dip"
-                    android:layout_height="30dip"
-                    android:layout_alignParentRight="true"
-                    android:layout_centerVertical="true"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_margin="10dip"
-                    android:src="@drawable/ic_right_chevron">
 
-                </ImageView>
 
             </FrameLayout>
 
